# drones

./: .gitignore  PREVIOUS_REPO_HANDOFF.md  README.md  pyproject.toml  requirements-colab.txt
configs/experiments/: hover.example.yaml
docs/: requested_source_files.md
src/drone_research/: __init__.py
src/drone_research/application/use_cases/: evaluate_hover.py  train_hover.py
src/drone_research/domain/: config.py
src/drone_research/infrastructure/: settings.py
src/drone_research/infrastructure/gym_pybullet/: __init__.py  ppo_hover.py
src/drone_research/interfaces/cli/: evaluate_hover.py  train_hover.py
tests/unit/: test_imports.py
